networking/bar-svc-default-ns.yaml
kind: Service
apiVersion: v1
metadata:
  name: bar
  namespace: default
spec:
  type: ExternalName
  externalName: bar.bar
