networking/foo.yaml
apiVersion: v1
kind: Service
metadata:
  name: foo
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: foo

---

apiVersion: apps/v1
kind: Deployment
metadata:
 name: foo
spec:
 replicas: 2
 selector:
   matchLabels:
     app: foo
 template:
   metadata:
    labels:
      app: foo
   spec:
     containers:
     - name: c1
       image: vvang/dummy:x86
       livenessProbe:
         initialDelaySeconds: 10
         periodSeconds: 3
         httpGet:
           path: /
           port: 8080
       readinessProbe:
         initialDelaySeconds: 10
         periodSeconds: 3
         httpGet:
           path: /
           port: 8080
