networking/nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: pingpong
spec:
  type: NodePort
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: foo
