networking/ingress-foo-bar.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: foo-bar
spec:
  ingressClassName: nginx
  rules:
  - host: "foo.example.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: foo
            port:
              number: 80
  - host: "bar.example.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: bar
            port:
              number: 80
